K8s-Manifests/shared-infra/netflix-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
apiVersion: v1
kind: Namespace
metadata:
  name: netflix
